Mejoras al core del framewrok Front-end incluido la autenticacion

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -18,18 +18,18 @@
     <div id="slidebar"></div>
     <div id="vista"></div>
     <footer id="footer"></footer>
-    <script src="app/libs/libspa.js"></script>
+    <!-- library spa -->
+    <script defer type="module" src="app/libs/laurel.js"></script>
+    <script defer src="app/route.routes.js"></script>
     <!-- controllers -->
-    <script type="module" src="app/controllers/user.controller.js"></script>
-    <script type="module" src="app/controllers/bus.controller.js"></script>
-    <script type="module" src="app/controllers/link.controller.js"></script>
-    <script src="app/route.routes.js"></script>
+    <script defe type="module" src="app/controllers/user.controller.js"></script>
+    <script defe type="module" src="app/controllers/bus.controller.js"></script>
     <!-- importacion de librerias -->
-    <script src="app/libs/jquery/jquery.min.js"></script>
-    <script src="app/libs/bootstrap/js/bootstrap.min.js"></script>
-    <script src="app/libs/fontawesome/js/fontawesome.min.js"></script>
-    <script src="app/libs/toastr/js/toastr.min.js"></script>
-    <script src="app/libs/sweetalert/js/sweetalert.min.js"></script>
+    <script defer src="app/libs/jquery/jquery.min.js"></script>
+    <script defer src="app/libs/bootstrap/js/bootstrap.min.js"></script>
+    <script defer src="app/libs/fontawesome/js/fontawesome.min.js"></script>
+    <script defer src="app/libs/toastr/js/toastr.min.js"></script>
+    <script defer src="app/libs/sweetalert/js/sweetalert.min.js"></script>
 </body>
 
 </html>
