Modulo de rutas finalizado

--- a/trans-public/index.html
+++ b/trans-public/index.html
@@ -38,6 +38,8 @@
     <script defer type="module" src="app/controllers/user.controller.js"></script>
     <script defer type="module" src="app/controllers/bus.controller.js"></script>
     <script defer type="module" src="app/controllers/routebus.controller.js"></script>
+    <script defer type="module" src="app/controllers/route.controller.js"></script>
+    <script defer type="module" src="app/controllers/contract.controller.js"></script>
 
     <!-- importacion de librerias -->
     <script defer src="app/libs/jquery/jquery.min.js"></script>
