--- a/trans-public/index.html
+++ b/trans-public/index.html
@@ -29,6 +29,9 @@
         </div>
     </div>
     <div id="default-view"></div>
+    <div id="loading"></div>
+    <div id="modal-view"></div>
+
     <!-- library spa -->
     <script defer type="module" src="app/libs/laurel.js"></script>
     <script defer src="app/route.routes.js"></script>
@@ -47,41 +50,6 @@
     <script defer src="app/libs/fontawesome/js/fontawesome.min.js"></script>
     <script defer src="app/libs/toastr/js/toastr.min.js"></script>
     <script defer src="app/libs/sweetalert/js/sweetalert.min.js"></script>
-
-    <!-- Modales -->
-
-    <div class="modal fade" id="user-detail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Actualizar usuario</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-                </div>
-                <div class="modal-body">
-                    <form id="update-user">
-                        <div class="form-group">
-                            <label for="name">Nombre completo <span class="required"></span> </label>
-                            <input type="text" name="nombrecompleto" class="form-control" id="nombrecompleto" placeholder="Nombre completo">
-                        </div>
-                        <div class="form-group ">
-                            <label for="correo">Email <span class="required"></span> </label>
-                            <input type="email" name="correo" class="form-control" id="correo" placeholder="Correo">
-                        </div>
-                        <div class="form-group ">
-                            <label for="telefono ">Telefono <span class="required"></span> </label>
-                            <input type="text" name="telefono" class="form-control" id="telefono" placeholder="Telefono">
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="submit" form="update-user" class="btn btn-primary">Actualizar usuario</button>
-                </div>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
